# phy-607-2023

./: syllabus.tex
class_materials/1003/: notes.txt
class_materials/1005/: notes.txt
class_materials/1012/: notes.txt  project2.txt
class_materials/1017/: notes.txt
class_materials/1024/: notes.txt  rosen.py
class_materials/1026/: notes.txt
class_materials/1031/: data.hdf  notes.txt  read_data.py
class_materials/1102/: notes.txt
class_materials/1107/: Untitled.ipynb  Untitled1.ipynb  data.hdf  data_post.py  mcmc.py  notes.txt  post.py
class_materials/1107/test_pkg/: pyproject.toml
class_materials/1107/test_pkg/src/pap/: test.py  test_cli.py
class_materials/1109/: notes.txt  project3.txt
class_materials/1128/: notes.txt
class_materials/1128/problems/: euler.py  euler2.py  example.py  fft.py  integrate.py  (+4 more)
class_materials/1130/: group_activity.txt
class_materials/831_bash/: bash_script.txt
class_materials/912/: notes.txt
class_materials/914/: notes.txt
class_materials/919/: notes.txt  project1.txt
class_materials/921/: notes.txt
class_materials/921/package_example/examp/: pyproject.toml
class_materials/921/package_example/examp/examp/: my_module.py
class_materials/926/: example.py  notes.txt  prof.sh
class_materials/928/: notes.txt
class_materials/projects/: project2.txt  project3.txt  project4.txt
class_problems/905_python_intro/: notes_cow.txt
class_problems/907_python_intro/: notes_cow.txt
class_problems/912/: notes.txt
example_report/: Makefile  example.bib  example.tex  project.cls
lectures/: linux_commands.lyx
